# RustNES

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  deny.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: developer-tooling.md
scripts/: check-no-real-rom-tests.sh  smoke-release-desktop.sh
src/: lib.rs  main.rs
src/core/: bus.rs  console.rs  mod.rs
src/core/apu/: mod.rs
src/core/cartridge/: error.rs  image.rs  ines.rs  mapper.rs  mod.rs  nrom.rs
src/core/cpu/: addressing.rs  execute.rs  mod.rs  opcode.rs  trace.rs
src/core/io/: controller.rs  dma.rs  mod.rs  ppu_ports.rs
src/core/ppu/: memory.rs  mod.rs  palette.rs  registers.rs  render.rs  sprites.rs
src/shell/: app.rs  diagnostics.rs  launcher.rs  load_rom.rs  mod.rs  trace.rs
src/shell/runtime/: audio.rs  input.rs  mod.rs  presentation.rs  session.rs  view.rs
tests/: apu_audio.rs  audio_runtime.rs  bus_mirroring.rs  cartridge_parser.rs  cpu_interrupts.rs  cpu_vectors.rs  desktop_product.rs  framebuffer_color_semantics.rs  mapper0.rs  nestest.rs  opcode_behavior.rs  ppu_background.rs  ppu_frame_start_scroll.rs  ppu_registers.rs  ppu_sprite0.rs  ppu_timing.rs  runtime_controls.rs  runtime_input.rs  runtime_session.rs  runtime_view.rs  save_state.rs  shell_diagnostics.rs  shell_loader.rs  smb_video.rs  trace_cli.rs
tests/roms/: nestest.nes
tests/support/: assertions.rs  mod.rs  runtime_script.rs  save_state.rs
