[package]
name = "RustNES"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.102"
bitflags = "2.11.0"
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal"] }
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.2.0"
insta = "1.46.3"
proptest = "1.10.0"
rstest = "0.26.1"
similar-asserts = "1.7.0"
