[package]
name = "RustNES"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
doctest = false

[dependencies]
anyhow = "1.0.102"
bitflags = "2.11.0"
cpal = "0.17.3"
pixels = "0.15.0"
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal"] }
ringbuf = "0.4.8"
thiserror = "2.0.18"
winit = "0.29.15"

[dev-dependencies]
assert_cmd = "2.2.0"
insta = "1.46.3"
proptest = "1.10.0"
rstest = "0.26.1"
similar-asserts = "1.7.0"
